feat: now possible to subscribe to the ActiveContent multiple times.
Also added return type on each function in the ActiveContent.

Had to update the react package so it also subscribes and unsubscribes
correctly.

The package.json's tsc script wills no longer emit.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,7 +18,7 @@
     "clean": "rm -rf node_modules && rm -rf coverage && rm -f .package.lock-json && rm -rf dist",
     "test": "jest --coverage",
     "start": "jest --watch --coverage",
-    "tsc": "tsc --version && tsc",
+    "tsc": "tsc --version && tsc --noEmit",
     "build": "rm -rf dist && rollup -c"
   },
   "devDependencies": {
