--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "lerna bootstrap",
     "clean-bootstrap": "npm run clean && npm run bootstrap",
     "test": "npm run bootstrap && lerna run tsc && lerna run test",
-    "build": "lerna run build"
+    "build": "lerna run build",
+    "link": "npm run build && npm run bootstrap",
+    "tsc": "lerna run tsc"
   }
 }
