improvement: in vue ActiveContent `options` param renamed to `config`
The ActiveContent calls it its config, so it was strange that it was
called options in vue.

Also vue's build has now been fixed, it did not generate the types
correctly.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -25,7 +25,7 @@
     "clean": "rm -rf node_modules && rm -rf coverage && rm -f .package.lock-json && rm -rf dist",
     "test": "vitest run --coverage",
     "tsc": "tsc --version && tsc --noEmit",
-    "build": "rm -rf dist && vite build && tsc"
+    "build": "rm -rf dist && vite build && tsc --emitDeclarationOnly --outfile dist/index"
   },
   "dependencies": {
     "@automata.dev/core": "0.0.0"
