--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -7,10 +7,10 @@
     "@angular/core": "^13.2.0"
   },
   "dependencies": {
-    "tslib": "2.3.1",
     "@automata.dev/core": "0.0.0"
   },
   "devDependencies": {
+		"@types/estree": "0.0.51",
     "@types/jasmine": "3.10.3",
     "@angular/cli": "13.2.3",
     "ng-packagr": "13.2.1",
