--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -19,7 +19,8 @@
     "test": "jest --coverage",
     "start": "jest --watch --coverage",
     "tsc": "tsc --version && tsc --noEmit",
-    "build": "rm -rf dist && rollup -c"
+    "build": "rm -rf dist && rollup -c",
+    "apigen": "rm -rf apigen && typedoc src  --json ../website/src/_data/api/core.json"
   },
   "devDependencies": {
     "@babel/core": "7.17.2",
@@ -35,6 +36,7 @@
     "rollup-plugin-dts": "4.1.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "ts-jest": "27.1.3",
-    "tslib": "2.3.1"
+    "tslib": "2.3.1",
+    "typedoc": "0.22.12"
   }
 }
