--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -29,6 +29,7 @@
     "@rollup/plugin-commonjs": "21.0.1",
     "@rollup/plugin-node-resolve": "13.1.3",
     "@rollup/plugin-typescript": "8.3.0",
+    "rollup-plugin-terser": "7.0.2",
     "@types/jest": "27.4.0",
     "babel-jest": "27.5.1",
     "jest": "27.5.1",
