--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,6 +38,7 @@
     "rollup-plugin-peer-deps-external": "2.2.4",
     "ts-jest": "27.1.3",
     "tslib": "2.3.1",
-    "typedoc": "0.22.12"
+    "typedoc": "0.22.12",
+    "typescript": "4.5.5"
   }
 }
