--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -48,6 +48,7 @@
     "@testing-library/react": "12.1.2",
     "@testing-library/react-hooks": "7.0.2",
     "@testing-library/user-event": "13.5.0",
-    "typedoc": "0.22.12"
+    "typedoc": "0.22.12",
+    "typescript": "4.5.5"
   }
 }
