--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,10 +9,11 @@
     "serve:webpack": "webpack --mode development --watch",
     "serve:eleventy": "ELEVENTY_ENV=development eleventy --serve --config=./eleventy.config.js",
     "start": "npm-run-all clean --parallel serve:*",
-    "build:webpack": "webpack --mode production",
-    "build:eleventy": "ELEVENTY_ENV=production eleventy --config=./eleventy.config.js",
-    "build": "NODE_ENV=production run-s clean build:*",
-    "apigen": "echo ignoring apigen for website"
+    "build-docs:webpack": "webpack --mode production",
+    "build-docs:eleventy": "ELEVENTY_ENV=production eleventy --config=./eleventy.config.js",
+    "build-docs": "NODE_ENV=production run-s clean build-docs:*",
+    "build": "echo ignoring build for website package",
+    "apigen": "rm -rf src/_data/api"
   },
   "keywords": [],
   "author": "",
