feat: added license key checking.
The `ActiveList` now calls the `_checkLicense` code in the constructor,
this way any use of the `ActiveList` will result in a license check.

Made the core package `sideEffects` free, so webpack can treeshake it
better.

All test in all other packages now set a fake license key, for testing
purposes.

The "website" core api generation now renders functions as well so the
`activateLicense` is shown.

Also renamed "Generic" to "generic".

Added `jest-watch-typeahead` so tests can be filtered. Also mocks are
now auto reset.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -11,6 +11,7 @@
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
   "types": "dist/index.d.ts",
+  "sideEffects": false,
   "files": [
     "dist"
   ],
@@ -33,6 +34,7 @@
     "@types/jest": "27.4.0",
     "babel-jest": "27.5.1",
     "jest": "27.5.1",
+    "jest-watch-typeahead": "1.1.0",
     "rollup": "2.67.1",
     "rollup-plugin-dts": "4.1.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
