dx: added nx to speed up commands. Preparing for publishing.
Preparing for publishing by:

1. Removed the version of "website" so it is not published, added a
   description.

2. Adding a publish command, to the global package.json.

3. Added a `publishConfig": { "access": "public" }`, to the all packages
   package.json, so we can publish scoped packages.

4. Removed my personal email in all package.json files.

--- a/package.json
+++ b/package.json
@@ -2,16 +2,20 @@
   "name": "root",
   "private": true,
   "devDependencies": {
-    "lerna": "4.0.0"
+    "lerna": "4.0.0",
+    "nx": "14.0.5"
   },
   "scripts": {
     "clean": "lerna run clean",
     "bootstrap": "lerna bootstrap",
     "clean-bootstrap": "npm run clean && npm run bootstrap",
-    "test": "npm run link && lerna run tsc && lerna run test && lerna run apigen && lerna run build-docs",
-    "build": "lerna run build",
+    "test": "npm run link && npm run tsc && npm run test:unit && npm run apigen && npm run build-docs",
+    "test:unit": "nx run-many --target=test --all",
+    "build": "nx run-many --target=build --all",
     "link": "npm run bootstrap && npm run build",
     "tsc": "lerna run tsc",
-    "apigen": "lerna run apigen"
+    "apigen": "nx run-many --target=apigen --all",
+    "build-docs": "nx build-docs website",
+    "publish": "lerna publish"
   }
 }
