--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -2,6 +2,15 @@
   "name": "@uiloos/angular",
   "version": "0.0.0",
   "description": "The Angular bindings of the uiloos headless UI",
+  "keywords": [
+    "uiloos"
+  ],
+  "author": "Maarten Hus",
+  "homepage": "https://uiloos.dev",
+  "license": "SEE LICENSE IN LICENSE.md",
+  "publishConfig": {
+    "access": "public"
+  },
   "peerDependencies": {
     "@angular/common": "^13.2.0",
     "@angular/core": "^13.2.0"
