--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,11 +3,15 @@
   "version": "0.0.0",
   "description": "The core of the uiloos headless UI",
   "keywords": [
-    "tabs"
+    "uiloos",
+    "ActiveList"
   ],
-  "author": "Maarten Hus <maartenhus@gmail.com>",
-  "homepage": "http://uiloos.dev",
+  "author": "Maarten Hus",
+  "homepage": "https://uiloos.dev",
   "license": "SEE LICENSE IN LICENSE.md",
+  "publishConfig": {
+    "access": "public"
+  },
   "module": "dist/esm/index.js",
   "main": "dist/cjs/index.js",
   "types": "dist/index.d.ts",
