--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -3,11 +3,14 @@
   "version": "0.0.0",
   "description": "The Vue bindings of the uiloos headless UI",
   "keywords": [
-    "tabs"
+    "uiloos"
   ],
-  "author": "Maarten Hus <maartenhus@gmail.com>",
-  "homepage": "http://uiloos.dev",
+  "author": "Maarten Hus",
+  "homepage": "https://uiloos.dev",
   "license": "SEE LICENSE IN LICENSE.md",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "exports": {
