--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -1,7 +1,6 @@
 {
   "name": "website",
-  "version": "1.0.0",
-  "description": "",
+  "description": "The uiloos website",
   "main": "index.js",
   "private": true,
   "scripts": {
