--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uiloos/angular",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "The Angular bindings of the uiloos headless UI",
   "keywords": [
     "uiloos"
@@ -16,25 +16,25 @@
     "@angular/core": "^13.2.0"
   },
   "dependencies": {
-    "@uiloos/core": "0.0.0"
+    "@uiloos/core": "^0.0.1"
   },
   "devDependencies": {
-		"@types/estree": "0.0.51",
-    "@types/jasmine": "3.10.3",
+    "@angular-devkit/build-angular": "13.2.3",
     "@angular/cli": "13.2.3",
-    "ng-packagr": "13.2.1",
     "@angular/common": "13.2.2",
     "@angular/core": "13.2.2",
-    "@angular-devkit/build-angular": "13.2.3",
     "@angular/platform-browser-dynamic": "13.2.2",
     "@testing-library/angular": "11.0.2",
-    "typescript": "4.5.5",
+    "@types/estree": "0.0.51",
+    "@types/jasmine": "3.10.3",
     "karma": "6.3.16",
-    "karma-jasmine": "4.0.1",
     "karma-chrome-launcher": "3.1.0",
-    "karma-jasmine-html-reporter": "1.7.0",
     "karma-coverage": "2.2.0",
-    "typedoc": "0.22.12"
+    "karma-jasmine": "4.0.1",
+    "karma-jasmine-html-reporter": "1.7.0",
+    "ng-packagr": "13.2.1",
+    "typedoc": "0.22.12",
+    "typescript": "4.5.5"
   },
   "scripts": {
     "clean": "rm -rf node_modules && rm -rf coverage && rm -f .package.lock-json && rm -rf dist",
