--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uiloos/react",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "The React bindings of the uiloos headless UI",
   "keywords": [
     "uiloos"
@@ -26,7 +26,7 @@
     "apigen": "rm -rf apigen && typedoc src  --json ../website/src/_data/api/react.json"
   },
   "dependencies": {
-    "@uiloos/core": "0.0.0"
+    "@uiloos/core": "^0.0.1"
   },
   "peerDependencies": {
     "react": "^17.0.2"
@@ -38,19 +38,19 @@
     "@rollup/plugin-commonjs": "21.0.1",
     "@rollup/plugin-node-resolve": "13.1.3",
     "@rollup/plugin-typescript": "8.3.0",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
+    "@testing-library/user-event": "13.5.0",
     "@types/jest": "27.4.0",
+    "@types/react": "17.0.39",
     "babel-jest": "27.5.1",
     "jest": "27.5.1",
+    "react": "17.0.2",
     "rollup": "2.67.2",
     "rollup-plugin-dts": "4.1.0",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "ts-jest": "27.1.3",
     "tslib": "2.3.1",
-    "@types/react": "17.0.39",
-    "react": "17.0.2",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
-    "@testing-library/user-event": "13.5.0",
     "typedoc": "0.22.12",
     "typescript": "4.5.5"
   }
