--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -11,6 +11,15 @@
   "publishConfig": {
     "access": "public"
   },
+  "module": "dist/fesm2015/uiloos-angular.mjs",
+  "es2020": "dist/fesm2020/uiloos-angular.mjs",
+  "esm2020": "dist/esm2020/uiloos-angular.mjs",
+  "fesm2020": "dist/fesm2020/uiloos-angular.mjs",
+  "fesm2015": "dist/fesm2015/uiloos-angular.mjs",
+  "typings": "dist/uiloos-angular.d.ts",
+  "files": [
+    "dist"
+  ], 
   "peerDependencies": {
     "@angular/common": "^13.2.0",
     "@angular/core": "^13.2.0"
@@ -37,6 +46,7 @@
     "typescript": "4.5.5"
   },
   "scripts": {
+    "before-publish": "cp ../../README.MD dist && cp ../../LICENSE.MD dist && rm dist/package.json",
     "clean": "rm -rf node_modules && rm -rf coverage && rm -f .package.lock-json && rm -rf dist",
     "test": "ng test --code-coverage=true --watch=false",
     "start": "ng test --code-coverage=true",
