--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
     "dist"
   ],
   "scripts": {
+    "before-publish": "cp ../../README.MD dist && cp ../../LICENSE.MD dist",
     "clean": "rm -rf node_modules && rm -rf coverage && rm -f .package.lock-json && rm -rf dist",
     "test": "jest --coverage",
     "start": "jest --watch --coverage",
