--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,7 +25,7 @@
     "test": "jest --coverage",
     "start": "jest --watch --coverage",
     "tsc": "tsc --version && tsc --noEmit",
-    "build": "rm -rf dist && rollup -c",
+    "build": "rm -rf dist && BUILD_MODE=typings rollup -c && BUILD_MODE=code rollup -c && rm -rf dist/cjs/types && rm -rf dist/esm/types && rm -rf dist/types",
     "apigen": "rm -rf apigen && typedoc src  --json ../website/src/_data/api/core.json"
   },
   "devDependencies": {
