--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "alpinejs": "3.9.0",
-    "aos": "^3.0.0-beta.6"
+    "aos": "3.0.0-beta.6",
+    "@uiloos/core": "^0.0.3"
   },
   "devDependencies": {
     "@11ty/eleventy": "1.0.0",
