--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -28,26 +28,30 @@
     "@uiloos/core": "^0.0.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.2.3",
-    "@angular/cli": "13.2.3",
-    "@angular/common": "13.2.2",
-    "@angular/core": "13.2.2",
-    "@angular/platform-browser-dynamic": "13.2.2",
-    "@testing-library/angular": "11.0.2",
+    "@angular-devkit/build-angular": "13.3.7",
+    "@angular/cli": "13.3.7",
+    "@angular/common": "13.3.10",
+    "@angular/core": "13.3.10",
+    "@angular/animations": "13.3.10",
+    "@angular/platform-browser-dynamic": "13.3.10",
+    "@testing-library/angular": "11.0.4",
     "@types/estree": "0.0.51",
-    "@types/jasmine": "3.10.3",
-    "karma": "6.3.16",
-    "karma-chrome-launcher": "3.1.0",
+    "@types/jasmine": "4.0.3",
+    "karma": "6.3.20",
+    "karma-chrome-launcher": "3.1.1",
     "karma-coverage": "2.2.0",
-    "karma-jasmine": "4.0.1",
-    "karma-jasmine-html-reporter": "1.7.0",
-    "ng-packagr": "13.2.1",
-    "typedoc": "0.22.12",
-    "typescript": "4.5.5"
+    "karma-jasmine": "5.0.1",
+    "karma-jasmine-html-reporter": "2.0.0",
+    "ng-packagr": "13.3.1",
+    "typedoc": "0.22.15",
+    "typescript": "4.6.4"
+  },
+  "overrides": {
+    "typescript": "4.6.4"
   },
   "scripts": {
     "before-publish": "cp ../../README.MD dist && cp ../../LICENSE.MD dist && rm dist/package.json",
-    "clean": "rm -rf node_modules && rm -rf coverage && rm -f .package.lock-json && rm -rf dist",
+    "clean": "rm -rf node_modules && rm -rf coverage && rm -f package-lock.json && rm -rf dist",
     "test": "ng test --code-coverage=true --watch=false",
     "start": "ng test --code-coverage=true",
     "tsc": "tsc --version && tsc --noEmit",
