--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,7 +21,7 @@
   ],
   "scripts": {
     "before-publish": "cp ../../README.MD dist && cp ../../LICENSE.MD dist",
-    "clean": "rm -rf node_modules && rm -rf coverage && rm -f .package.lock-json && rm -rf dist",
+    "clean": "rm -rf node_modules && rm -rf coverage && rm -f package-lock.json && rm -rf dist",
     "test": "jest --coverage",
     "start": "jest --watch --coverage",
     "tsc": "tsc --version && tsc --noEmit",
@@ -29,23 +29,27 @@
     "apigen": "rm -rf apigen && typedoc src  --json ../website/src/_data/api/core.json"
   },
   "devDependencies": {
-    "@babel/core": "7.17.2",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-typescript": "7.16.7",
-    "@rollup/plugin-commonjs": "21.0.1",
-    "@rollup/plugin-node-resolve": "13.1.3",
-    "@rollup/plugin-typescript": "8.3.0",
-    "@types/jest": "27.4.0",
-    "babel-jest": "27.5.1",
-    "jest": "27.5.1",
+    "@babel/core": "7.18.2",
+    "@babel/preset-env": "7.18.2",
+    "@babel/preset-typescript": "7.17.12",
+    "@rollup/plugin-commonjs": "22.0.0",
+    "@rollup/plugin-node-resolve": "13.3.0",
+    "@rollup/plugin-typescript": "8.3.2",
+    "@types/jest": "27.5.1",
+    "babel-jest": "28.1.0",
+    "jest": "28.1.0",
     "jest-watch-typeahead": "1.1.0",
-    "rollup": "2.67.1",
-    "rollup-plugin-dts": "4.1.0",
+    "jest-environment-jsdom": "28.1.0",
+    "rollup": "2.74.1",
+    "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
     "rollup-plugin-terser": "7.0.2",
-    "ts-jest": "27.1.3",
-    "tslib": "2.3.1",
-    "typedoc": "0.22.12",
-    "typescript": "4.5.5"
+    "ts-jest": "28.0.3",
+    "tslib": "2.4.0",
+    "typedoc": "0.22.15",
+    "typescript": "4.7.2"
+  },
+  "overrides": {
+    "typescript": "4.7.2"
   }
 }
