--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -26,7 +26,7 @@
   "scripts": {
     "before-publish": "cp ../../README.MD dist && cp ../../LICENSE.MD dist",
     "start": "vitest watch --coverage",
-    "clean": "rm -rf node_modules && rm -rf coverage && rm -f .package.lock-json && rm -rf dist",
+    "clean": "rm -rf node_modules && rm -rf coverage && rm -f package-lock.json && rm -rf dist",
     "test": "vitest run --coverage",
     "tsc": "tsc --version && tsc --noEmit",
     "build": "rm -rf dist && vite build && tsc --emitDeclarationOnly --outfile dist/index",
@@ -40,14 +40,17 @@
   },
   "devDependencies": {
     "@testing-library/vue": "next",
-    "@vitejs/plugin-vue": "2.2.0",
-    "c8": "7.11.0",
-    "jest": "27.5.1",
-    "jest-environment-jsdom": "27.5.1",
-    "typedoc": "0.22.12",
-    "typescript": "4.5.5",
-    "vite": "2.8.2",
-    "vitest": "0.3.5",
-    "vue": "3.2.31"
+    "@vitejs/plugin-vue": "2.3.3",
+    "c8": "7.11.3",
+    "jest": "28.1.0",
+    "jest-environment-jsdom": "28.1.0",
+    "typedoc": "0.22.15",
+    "typescript": "4.7.2",
+    "vite": "2.9.9",
+    "vitest": "0.12.9",
+    "vue": "3.2.36"
+  },
+  "overrides": {
+    "typescript": "4.7.2"
   }
 }
