--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -50,7 +50,7 @@
     "typescript": "4.6.4"
   },
   "scripts": {
-    "before-publish": "cp ../../README.MD dist && cp ../../LICENSE.MD dist && rm dist/package.json",
+    "before-publish": "cp ../../README.MD ./ && cp ../../LICENSE.MD dist && rm dist/package.json",
     "clean": "rm -rf node_modules && rm -rf coverage && rm -f package-lock.json && rm -rf dist",
     "test": "ng test --code-coverage=true --watch=false",
     "start": "ng test --code-coverage=true",
