--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -18,7 +18,7 @@
     "dist"
   ],
   "scripts": {
-    "before-publish": "cp ../../README.MD dist && cp ../../LICENSE.MD dist",
+    "before-publish": "cp ../../README.MD ./ && cp ../../LICENSE.MD dist",
     "clean": "rm -rf node_modules && rm -rf coverage && rm -f package-lock.json && rm -rf dist",
     "test": "jest --coverage",
     "start": "jest --watch --coverage",
