--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uiloos/react",
-  "version": "0.0.5",
+  "version": "0.0.6-alpha.0",
   "description": "The React bindings of the uiloos headless UI",
   "keywords": [
     "uiloos"
@@ -27,7 +27,7 @@
     "apigen": "rm -rf apigen && typedoc src  --json ../website/src/_data/api/react.json"
   },
   "dependencies": {
-    "@uiloos/core": "^0.0.5"
+    "@uiloos/core": "^0.0.6-alpha.0"
   },
   "peerDependencies": {
     "react": "^17.0.2 || ^18.1.0"
