--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -57,5 +57,6 @@
     "tsc": "tsc --version && tsc --noEmit",
     "build": "rm -rf dist && ng-packagr -p ng-package.json",
     "apigen": "rm -rf apigen && typedoc src/public-api.ts  --json ../website/src/_data/api/angular.json"
-  }
+  },
+  "gitHead": "02cfd398c901db39e372bdc9482a21eb57a3fdfb"
 }
