--- a/packages/angular/package.json
+++ b/packages/angular/package.json
@@ -21,33 +21,33 @@
     "dist"
   ],
   "peerDependencies": {
-    "@angular/common": "^13.2.0",
-    "@angular/core": "^13.2.0"
+    "@angular/common": "^13.2.0 || ^14.0.0",
+    "@angular/core": "^13.2.0  || ^14.0.0"
   },
   "dependencies": {
     "@uiloos/core": "^0.0.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "13.3.7",
-    "@angular/animations": "13.3.10",
-    "@angular/cli": "13.3.7",
-    "@angular/common": "13.3.10",
-    "@angular/core": "13.3.10",
-    "@angular/platform-browser-dynamic": "13.3.10",
-    "@testing-library/angular": "11.0.4",
-    "@types/estree": "0.0.51",
+    "@angular-devkit/build-angular": "14.1.3",
+    "@angular/animations": "14.1.3",
+    "@angular/cli": "14.1.3",
+    "@angular/common": "14.1.3",
+    "@angular/core": "14.1.3",
+    "@angular/platform-browser-dynamic": "14.1.3",
+    "@testing-library/angular": "12.1.2",
+    "@types/estree": "1.0.0",
     "@types/jasmine": "4.0.3",
-    "karma": "6.3.20",
+    "karma": "6.4.0",
     "karma-chrome-launcher": "3.1.1",
     "karma-coverage": "2.2.0",
-    "karma-jasmine": "5.0.1",
+    "karma-jasmine": "5.1.0",
     "karma-jasmine-html-reporter": "2.0.0",
-    "ng-packagr": "13.3.1",
-    "typedoc": "0.22.15",
-    "typescript": "4.6.4"
+    "ng-packagr": "14.1.0",
+    "typedoc": "0.23.10",
+    "typescript": "4.7.4"
   },
   "overrides": {
-    "typescript": "4.6.4"
+    "typescript": "4.7.4"
   },
   "scripts": {
     "before-publish": "cp ../../README.MD ./ && cp ../../LICENSE.MD dist && rm dist/package.json",
@@ -57,5 +57,6 @@
     "tsc": "tsc --version && tsc --noEmit",
     "build": "rm -rf dist && ng-packagr -p ng-package.json",
     "apigen": "rm -rf apigen && typedoc src/public-api.ts  --json ../website/src/_data/api/angular.json"
-  }
+  },
+  "gitHead": "0be49f92c7e4ea9970be2610af79eb06e8d9477d"
 }
