--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uiloos/react",
-  "version": "0.0.5",
+  "version": "0.0.6-alpha.4",
   "description": "The React bindings of the uiloos headless UI",
   "keywords": [
     "uiloos"
@@ -33,29 +33,30 @@
     "react": "^17.0.2 || ^18.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.18.2",
-    "@babel/preset-env": "7.18.2",
-    "@babel/preset-typescript": "7.17.12",
-    "@rollup/plugin-commonjs": "22.0.0",
+    "@babel/core": "7.18.10",
+    "@babel/preset-env": "7.18.10",
+    "@babel/preset-typescript": "7.18.6",
+    "@rollup/plugin-commonjs": "22.0.2",
     "@rollup/plugin-node-resolve": "13.3.0",
-    "@rollup/plugin-typescript": "8.3.2",
-    "@testing-library/react": "13.2.0",
-    "@testing-library/user-event": "14.2.0",
-    "@types/jest": "27.5.1",
-    "@types/react": "18.0.9",
-    "babel-jest": "28.1.0",
-    "jest": "28.1.0",
-    "jest-environment-jsdom": "28.1.0",
-    "react": "18.1.0",
-    "rollup": "2.74.1",
+    "@rollup/plugin-typescript": "8.3.4",
+    "@testing-library/react": "13.3.0",
+    "@testing-library/user-event": "14.4.3",
+    "@types/jest": "28.1.7",
+    "@types/react": "18.0.17",
+    "babel-jest": "28.1.3",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
+    "react": "18.2.0",
+    "rollup": "2.78.1",
     "rollup-plugin-dts": "4.2.2",
     "rollup-plugin-peer-deps-external": "2.2.4",
-    "ts-jest": "28.0.3",
+    "ts-jest": "28.0.8",
     "tslib": "2.4.0",
-    "typedoc": "0.22.15",
-    "typescript": "4.7.2"
+    "typedoc": "0.23.10",
+    "typescript": "4.7.4"
   },
   "overrides": {
-    "typescript": "4.7.2"
-  }
+    "typescript": "4.7.4"
+  },
+  "gitHead": "0be49f92c7e4ea9970be2610af79eb06e8d9477d"
 }
