--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -39,18 +39,20 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@testing-library/vue": "next",
-    "@vitejs/plugin-vue": "2.3.3",
-    "c8": "7.11.3",
-    "jest": "28.1.0",
-    "jest-environment-jsdom": "28.1.0",
-    "typedoc": "0.22.15",
-    "typescript": "4.7.2",
-    "vite": "2.9.9",
-    "vitest": "0.12.9",
-    "vue": "3.2.36"
+    "@testing-library/vue": "6.6.1",
+    "@vitejs/plugin-vue": "3.0.3",
+    "@vitest/coverage-c8": "0.22.1",
+    "c8": "7.12.0",
+    "jest": "28.1.3",
+    "jest-environment-jsdom": "28.1.3",
+    "typedoc": "0.23.10",
+    "typescript": "4.7.4",
+    "vite": "3.0.9",
+    "vitest": "0.22.1",
+    "vue": "3.2.37"
   },
   "overrides": {
-    "typescript": "4.7.2"
-  }
+    "typescript": "4.7.4"
+  },
+  "gitHead": "0be49f92c7e4ea9970be2610af79eb06e8d9477d"
 }
