improvement: improved AutoDismiss and AutoPlay.
Changes:

1. Removed the `isPlaying` method from the ActiveList in favor of a
   `isPlaying` variable. This way all properties are properties and all
   methods are actions. This makes the API more clear.
   See DECISIONS.md #000004.

2. Now tracking events for the ActiveList AutoPlay, this way it is
   possible to do playing animations, added a playing animation to the
   carousel on the website to demonstrate this.

3. Moved the AutoPlay and AutoDismiss values into their own objects,
   so they are more group together. Reading `autoPlay.isPlaying` makes
   the api a little nicer.

   Also I want to add a cooldown duration in the future as well so the
   naming would get awkward real fast, then you would get a
   `cooldownDuration` and a `autoPlayDuration` which I think is less
   clear.

4. AutoPlay, CooldownTimer, and AutoDismiss all now start with an
   underscore denoting that they are private.

5. Renamed autoplay to autoPlay in the ActiveList. Makes it more in line
   with autoDismiss.

6. AutoPlay and AutoDismiss will now set the duration to zero when
   stopped.

7. AutoPlay and AutoDismiss now allow stopping when paused, before this
   was not allowed.

8. Changed website scripts, added cleanup which cleans up like all other
   packages now, and a `clean:site` for just the _site folder.

9. Bulked up the tests for AutoDismiss and AutoPlay, now checking for
   the actual events, instead of hoping for the best by checking the
   number of times the subscriber has been called. Also now checking
   all relevant properties all the time.

10. Improved various bits of jsdocs.

11. Renamed the type`ViewChannelAutoDismissConfig` to
   `ViewChannelViewAutoDismissConfig` to better reflect where it is
    used.

Fixed a small bug in the website, when there was no `doc-toc` navigation
an error would occur. Fixed by checking if it exist before checking
if it has the `data-no-highlight` attribute.

--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -4,13 +4,14 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "clean": "rm -rf _site",
+    "clean": "rm -rf node_modules && rm -f package-lock.json && rm -rf _site",
+    "clean:site": "rm -rf _site",
     "serve:webpack": "webpack --mode development --watch",
     "serve:eleventy": "ELEVENTY_ENV=development eleventy --serve --config=./eleventy.config.js",
-    "start": "npm-run-all clean --parallel serve:*",
+    "start": "npm-run-all clean:site --parallel serve:*",
     "build-docs:webpack": "webpack --mode production",
     "build-docs:eleventy": "ELEVENTY_ENV=production eleventy --config=./eleventy.config.js",
-    "build-docs": "NODE_ENV=production run-s clean build-docs:*",
+    "build-docs": "NODE_ENV=production run-s clean:site build-docs:*",
     "build": "echo ignoring build for website package",
     "apigen": "rm -rf src/_data/api"
   },
@@ -20,7 +21,7 @@
   "dependencies": {
     "alpinejs": "3.10.2",
     "aos": "3.0.0-beta.6",
-    "@uiloos/core": "^0.0.4"
+    "@uiloos/core": "^0.0.5"
   },
   "devDependencies": {
     "@11ty/eleventy": "1.0.1",
