fix: apigen execution order caused it to fail.
Due to an update of nx and lerna the order in which the apigen was
executed changed. Before the `website` always ran first, in which it
cleared the "data" folder, after the update it ran third. This caused it
to clear the data folder at half way point, which is of course not a
good idea.

The fix was adding a `apigen:pre` task to the `website`, and running it
before the `apigen` in the root package. This way we guarantee that
`website` is run first.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "nx run-many --target=build --all",
     "link": "npm run bootstrap && npm run build",
     "tsc": "lerna run tsc",
-    "apigen": "nx run-many --target=apigen --all",
+    "apigen": "nx run-many --target=apigen:pre --all && nx run-many --target=apigen --all",
     "build-docs": "npm run link && npm run apigen && nx build-docs website",
     "publish:release": "npm run test && lerna run before-publish && lerna publish",
     "publish:alpha": "npm run test && lerna run before-publish && lerna publish --dist-tag alpha"
