--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -13,7 +13,7 @@
     "build-docs:eleventy": "ELEVENTY_ENV=production eleventy --config=./eleventy.config.js",
     "build-docs": "NODE_ENV=production run-s clean:site build-docs:*",
     "build": "echo ignoring build for website package",
-    "apigen": "rm -rf src/_data/api"
+    "apigen:pre": "rm -rf src/_data/api"
   },
   "keywords": [],
   "author": "",
