--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "apigen": "nx run-many --target=apigen:pre --all && nx run-many --target=apigen --all",
     "build-docs": "npm run link && npm run apigen && nx build-docs website",
     "publish:release": "npm run test && lerna run before-publish && lerna publish",
-    "publish:alpha": "npm run test && lerna run before-publish && lerna publish --dist-tag alpha"
+    "publish:alpha": "npm run test && lerna run before-publish && lerna publish --dist-tag alpha",
+    "updated": "lerna updated"
   }
 }
