--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ packages/*/README.md
 # Generated website
 packages/website/_site/
 packages/website/src/_data/api/
+packages/website/src/search/
 
 .cache
 
