--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -38,6 +38,8 @@
     "sass-loader": "13.0.0",
     "tailwindcss": "3.1.4",
     "webpack": "5.73.0",
-    "webpack-cli": "4.10.0"
+    "webpack-cli": "4.10.0",
+    "typescript": "5.0.4",
+    "ts-loader": "9.4.2"
   }
 }
