feature: added Svelte bindings.
Had to add svelte to the websites home page, and to the API docs as
well. Restyled the api hub page so it is more visual.

Tiny refactoring: removed unused macros.njk imports in function.njk.

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ packages/*/dist/
 packages/*/coverage/
 packages/*/README.md
 
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
+
 # Generated website
 packages/website/_site/
 packages/website/src/_data/api/
@@ -25,3 +28,4 @@ packages/website/src/search/
 .DS_Store
 
 .angular
+.svelte-kit
