--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uiloos/core",
-  "version": "1.2.1",
+  "version": "1.3.0-alpha.0",
   "description": "The core of the uiloos headless UI",
   "keywords": [
     "uiloos",
@@ -35,8 +35,8 @@
     "@babel/preset-typescript": "7.22.5",
     "@rollup/plugin-commonjs": "25.0.2",
     "@rollup/plugin-node-resolve": "15.1.0",
-    "@rollup/plugin-typescript": "11.1.2",
     "@rollup/plugin-terser": "0.4.3",
+    "@rollup/plugin-typescript": "11.1.2",
     "@types/jest": "29.5.2",
     "babel-jest": "29.5.0",
     "jest": "29.5.0",
