--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uiloos/core",
-  "version": "1.4.0",
+  "version": "1.5.0-alpha.0",
   "description": "The core of the uiloos headless UI",
   "keywords": [
     "uiloos",
