--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@uiloos/vue",
-  "version": "1.4.0",
+  "version": "1.5.0-alpha.0",
   "description": "The Vue bindings of the uiloos headless UI",
   "keywords": [
     "uiloos"
@@ -33,7 +33,7 @@
     "apigen": "typedoc src/index.ts --json ../website/src/_data/api/vue.json"
   },
   "dependencies": {
-    "@uiloos/core": "^1.4.0"
+    "@uiloos/core": "^1.5.0-alpha.0"
   },
   "peerDependencies": {
     "vue": "^3.0.0"
