--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@uiloos/svelte",
-	"version": "1.5.0",
+	"version": "1.6.0-alpha.0",
 	"scripts": {
 		"before-publish": "cp ../../README.MD ./ && cp ../../LICENSE.MD dist",
 		"start": "svelte-kit sync && vitest watch --coverage",
@@ -22,7 +22,7 @@
 		"!dist/**/*.spec.*"
 	],
 	"dependencies": {
-		"@uiloos/core": "^1.5.0"
+		"@uiloos/core": "^1.6.0-alpha.0"
 	},
 	"peerDependencies": {
 		"svelte": "^4.0.0"
