--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -11,6 +11,7 @@
   "publishConfig": {
     "access": "public"
   },
+  "type": "module",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "exports": {
