--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -22,7 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "alpinejs": "3.12.2",
-    "@uiloos/core": "^1.2.1"
+    "@uiloos/core": "1.6.0-alpha.9"
   },
   "devDependencies": {
     "@types/alpinejs": "3.7.2",
