Added types to vue package.json

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -17,7 +17,8 @@
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "types": "dist/index.d.ts",
