fix: TypeScript types for Vue did not generate correctly.
Problem was that the types were not created correctly and set in the
package.json.

To fix the type generation the package `vite-plugin-dts` was added.
The types are not generated on build in the vite.config.js via the
new package.

As for the package.json, its type set to "module" now, and the types
are now included in the "export" key.

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -11,12 +11,14 @@
   "publishConfig": {
     "access": "public"
   },
+  "type": "module",
   "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index.d.ts"
     }
   },
   "types": "dist/index.d.ts",
@@ -29,7 +31,7 @@
     "clean": "rm -rf coverage && rm -rf dist",
     "test": "vitest run --coverage",
     "tsc": "tsc --version && tsc --noEmit",
-    "build": "rm -rf dist && vite build && tsc --emitDeclarationOnly --outfile dist/index",
+    "build": "rm -rf dist && vite build",
     "apigen": "typedoc src/index.ts --json ../website/src/_data/api/vue.json"
   },
   "dependencies": {
@@ -47,6 +49,7 @@
     "typedoc": "0.24.8",
     "typescript": "5.1.5",
     "vite": "4.3.9",
+    "vite-plugin-dts": "3.7.2",
     "vitest": "0.32.2",
     "vue": "3.3.4"
   },
