feat: added DateGallery component
The component allows the user to create calendars and date pickers with.

The following changes were made to the rest of the code to support
the new DateGallery and fix build issues:

1. API docs now support documenting "constants" such as the new
   `DATE_GALLERY_MODES`.

2. API docs now splits up groups based on the name by normalizing the
   name first. So `DATE_GALLERY_MODES` becomes `dategallerymodes`.

3. API docs now support code highlighting when encountering backticks.

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -23,8 +23,8 @@
     "prepublishOnly": "UILOOSVERSION=$(jq -r .version ./package.json) && find dist -name \"*.js\" | grep min.js | sed \"p;s/VERSION/${UILOOSVERSION}/g\" | xargs -n2 mv",
     "before-publish": "cp ../../README.MD ./ && cp ../../LICENSE.MD dist",
     "clean": "rm -rf coverage && rm -rf dist",
-    "test": "jest --coverage && node ./tests/minification-check.js",
-    "start": "jest --watch --coverage",
+    "test": "TZ=Pacific/Samoa jest --coverage && node ./tests/minification-check.js",
+    "start": "TZ=Pacific/Samoa jest --watchAll --coverage",
     "tsc": "tsc --version && tsc --noEmit",
     "build": "rm -rf dist && rollup -c rollup.typings.config.cjs && rollup -c rollup.esm-cjs.config.cjs && rollup -c rollup.minification.config.cjs && rm -rf dist/cjs/types && rm -rf dist/esm/types && rm -rf dist/types",
     "apigen": "typedoc src  --json ../website/src/_data/api/core.json"
