--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -21,15 +21,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "alpinejs": "3.12.2",
-    "@uiloos/core": "^1.5.0"
+    "@uiloos/core": "^1.6.0",
+    "alpinejs": "3.12.2"
   },
   "devDependencies": {
-    "@types/alpinejs": "3.7.2",
     "@11ty/eleventy": "2.0.1",
     "@11ty/eleventy-navigation": "0.3.5",
     "@11ty/eleventy-plugin-syntaxhighlight": "5.0.0",
     "@tailwindcss/forms": "0.5.3",
+    "@types/alpinejs": "3.7.2",
     "autoprefixer": "10.4.14",
     "css-loader": "6.8.1",
     "mini-css-extract-plugin": "2.7.6",
@@ -39,9 +39,9 @@
     "sass": "1.63.6",
     "sass-loader": "13.3.2",
     "tailwindcss": "3.3.2",
-    "webpack": "5.88.0",
-    "webpack-cli": "5.1.4",
+    "ts-loader": "9.4.3",
     "typescript": "5.1.5",
-    "ts-loader": "9.4.3"
+    "webpack": "5.88.0",
+    "webpack-cli": "5.1.4"
   }
 }
