--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -23,7 +23,8 @@
   "license": "ISC",
   "dependencies": {
     "@uiloos/core": "^1.6.0",
-    "alpinejs": "3.12.2"
+    "alpinejs": "3.13.7",
+    "date-fns": "3.6.0"
   },
   "devDependencies": {
     "@11ty/eleventy": "2.0.1",
